<resources>
    <string name="app_name">SNAPSHOP</string>

    //onBoard Heading
    <string name="ob_header1">CREATIVITY IS HERE</string>
    <string name="ob_header2">YOUR SATISFACTION IS OUR PRIORITY</string>
    <string name="ob_header3">NO HIDDEN CHARGES OR FEES</string>
    <string name="ob_header4">NO HIDDEN CHARGES OR FEES</string>

    //onBoard Button
    <string name="ob_get_started">GET STARTED</string>

    //onBoard Description
    <string name="ob_desc1">Wonep converts international calls to local calls without WiFi or data</string>
    <string name="ob_desc2">If the person you’re calling also has Wonep the call will be entirely free</string>
    <string name="ob_desc3">We have a very small charge for non-Wonep calls to mobiles or landlines</string>
    <string name="ob_desc4">We have a very small charge for non-Wonep calls to mobiles or landlines</string>


    <string name="title_activity_client_home_screen">ClientHomeScreen</string>
    <string name="title_home">Home</string>
    <string name="title_inbox">Inbox</string>
    <string name="title_profile">Profile</string>
    <string name="title_about">About Us</string>
    <string name="title_activity_bottom_navigation">BottomNavigation</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile_disc">Profile Pic</string>
    <string name="user_name">User Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="email_one">Email</string>
    <string name="address">Address</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="password_one">Password</string>
    <string name="editing_price">Editing Price</string>
    <string name="editor">Editor</string>
    <string name="register">Register</string>
    <string name="customer">Customer</string>
    <string name="logo">LOGO</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="keep_me_login">Keep Me Login</string>
    <string name="login">LOGIN</string>
    <string name="fingerprint_logo">FingerPrint Logo</string>
    <string name="create_an_account">Create An Account</string>
    <string name="forget_password">Forget Password ?</string>

</resources>
