<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/mountain"
    tools:context=".activities.LoginActivity"
    android:id="@+id/relative"
    >

    <LinearLayout
        android:id="@+id/ll_hide"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="30dp"
        android:theme="@style/Theme.MaterialComponents.DayNight.DarkActionBar"
        >

        <ImageView
            android:layout_width="140dp"
            android:layout_height="113dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:background="@drawable/snapshop_logo"
            android:contentDescription="@string/logo" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_login_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_marginTop="50dp"
            android:textColorHint="#ffffff"
            app:boxCornerRadiusBottomEnd="20dp"
            app:boxCornerRadiusTopEnd="20dp"
            app:boxCornerRadiusTopStart="20dp"
            app:boxCornerRadiusBottomStart="20dp"
            android:paddingStart="5dp"
            tools:ignore="RtlSymmetry">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_login_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:textColor="@color/white"
                android:inputType="textEmailAddress"

                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_marginTop="10dp"
            android:textColorHint="#ffffff"
            app:boxCornerRadiusBottomEnd="20dp"
            app:boxCornerRadiusTopEnd="20dp"
            app:boxCornerRadiusTopStart="20dp"
            app:boxCornerRadiusBottomStart="20dp"
            android:paddingStart="5dp"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="#ffffff"
            tools:ignore="RtlSymmetry">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/et_login_password"
                android:hint="@string/password"
                android:textColor="@color/white"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>

        <CheckBox
            android:id="@+id/cb_keep_me_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/keep_me_login"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:layout_marginTop="10dp"
            android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="100">



        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:layout_weight="15"
            android:text="@string/login"
            android:background="@drawable/button_radius"/>

        <ImageView
            android:id="@+id/iv_biometric"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:layout_weight="85"
            android:background="@drawable/ic_fingerprint"
            android:layout_marginTop="10dp"
            android:layout_marginStart="5dp"

            android:backgroundTint="@color/colorPrimaryDark"


            android:contentDescription="@string/fingerprint_logo" />

    </LinearLayout>

        <TextView
            android:id="@+id/forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/forget_password"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:textStyle="bold"
           />


    </LinearLayout>

    <TextView
        android:id="@+id/tv_register"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/create_an_account"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:textSize="16sp"
        android:clickable="true"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="50dp"
        android:focusable="true" />

    <com.github.ybq.android.spinkit.SpinKitView
        android:id="@+id/spin_kit_login"
        style="@style/SpinKitView.Large.Circle"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        app:SpinKit_Color="@color/colorPrimary"
        android:visibility="gone"/>

</RelativeLayout>